# ringrodeo-docker

./: .gitignore  README.md  compose.yaml
api/: Dockerfile  pyproject.toml
api/split_models/fold_0.pth/: manifest
api/split_models/fold_1.pth/: manifest
api/split_models/fold_2/: manifest
api/split_models/fold_3/: manifest
api/split_models/fold_4/: manifest
api/src/api/: __init__.py  api.py  main.py  models.py  split.py  utils.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  BatchImagePredictor.js  Home.js  Navbar.js  SingleImagePredictor.js  SmartImage.js  setupProxy.js
